# GfetcherT

./: LICENSE  pyproject.toml  readme.md  requirements.txt
gfetchert/: __init__.py  core.py  file_ops.py  geocode.py
gfetchert.egg-info/: PKG-INFO
